# ibkr-portfolio-rebalancer

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml.sample  credentials.list.example  docker-compose.yml  pyproject.toml
har_logging_proxy/: har_dump.py  run
portfolio_rebalancer/: __main__.py  api.py  decimal_utils.py  portfolio_cap.py  portfolio_rebalancer.py
